--- a/manager/src/main/res/values-ru/strings.xml
+++ b/manager/src/main/res/values-ru/strings.xml
@@ -49,9 +49,12 @@
     <!-- Home - Application management -->
     <string name="home_app_management_title">Управление приложениями</string>
     <plurals name="home_app_management_authorized_apps_count">
-        <item quantity="zero"><![CDATA[Авторизовано приложений: %d]]></item>
-        <item quantity="one"><![CDATA[Авторизовано приложений: %d]]></item>
-        <item quantity="other"><![CDATA[Авторизовано приложений: %d]]></item>
+        <item quantity="zero"><![CDATA[Авторизовано %d приложений]]></item>
+        <item quantity="one"><![CDATA[Авторизовано %d приложениe]]></item>
+        <item quantity="two"><![CDATA[Авторизовано %d приложения]]></item>
+        <item quantity="few"><![CDATA[Авторизовано %d приложения]]></item>
+        <item quantity="many"><![CDATA[Авторизовано %d приложений]]></item>
+        <item quantity="other"><![CDATA[Авторизовано %d приложений]]></item>  
     </plurals>
     <string name="home_app_management_view_authorized_apps"><![CDATA[Нажмите, чтобы управлять авторизованными приложениями]]></string>
 
