--- a/manager/src/main/res/values-ru/strings.xml
+++ b/manager/src/main/res/values-ru/strings.xml
@@ -6,7 +6,7 @@
     <string name="home_status_service_is_running">%1$s запущен</string>
     <string name="home_status_service_not_running">%1$s не запущен</string>
     <string name="home_status_service_version">Версия %2$d, %1$s</string>
-    <string name="home_status_service_version_update"><![CDATA[версия %2$d, %1$s<br>Попробуйте снова, обновив до версии %3$d]]></string>
+    <string name="home_status_service_version_update"><![CDATA[Версия %2$d, %1$s<br>Попробуйте снова, обновив до версии %3$d]]></string>
 
     <!-- Home - Adb -->
     <string name="home_adb_title"><![CDATA[Запуск через подключение к компьютеру]]></string>
@@ -49,9 +49,12 @@
     <!-- Home - Application management -->
     <string name="home_app_management_title">Управление приложениями</string>
     <plurals name="home_app_management_authorized_apps_count">
-        <item quantity="zero"><![CDATA[Авторизовано приложений: %d]]></item>
-        <item quantity="one"><![CDATA[Авторизовано приложений: %d]]></item>
-        <item quantity="other"><![CDATA[Авторизовано приложений: %d]]></item>
+        <item quantity="zero"><![CDATA[Авторизовано %d приложений]]></item>
+        <item quantity="one"><![CDATA[Авторизовано %d приложениe]]></item>
+        <item quantity="two"><![CDATA[Авторизовано %d приложения]]></item>
+        <item quantity="few"><![CDATA[Авторизовано %d приложения]]></item>
+        <item quantity="many"><![CDATA[Авторизовано %d приложений]]></item>
+        <item quantity="other"><![CDATA[Авторизовано %d приложений]]></item>  
     </plurals>
     <string name="home_app_management_view_authorized_apps"><![CDATA[Нажмите, чтобы управлять авторизованными приложениями]]></string>
 
