--- a/manager/src/main/res/values-pl/strings.xml
+++ b/manager/src/main/res/values-pl/strings.xml
@@ -11,4 +11,35 @@
     <string name="home_wireless_adb_title">Uruchom przez debugowanie bezprzewodowe</string>
     <string name="home_adb_dialog_view_command_button_send">Wyślij</string>
     <string name="home_adb_dialog_view_command_copy_button">Kopiuj</string>
+    <string name="dialog_wireless_adb_not_enabled">Debugowanie bezprzewodowe jest wyłączone. Przed Android 11 żeby włączyć debugowanie bezprzewodowe musisz mieć polączenie z komputerem.</string>
+    <string name="notification_service_starting">Usługa Shizuku się uruchamia…</string>
+    <string name="action_stop">Zatrzymaj Shizuku</string>
+    <string name="action_about">O</string>
+    <string name="settings_start_on_boot">Uruchom przy starcie systemu (tylko dla urządzeń z rootem)</string>
+    <string name="settings_prefer_su_context">Użyj pełnego roota gdy dostępny</string>
+    <string name="settings_black_night_theme">Motyw ciemny</string>
+    <string name="settings_black_night_theme_summary">Użyj czysto-czarnego motywu gdy tryb nnocny jest włączony</string>
+    <string name="settings_language">Język</string>
+    <string name="settings_title">Ustawienia</string>
+    <string name="app_management_menu_get_more">Więcej</string>
+    <string name="home_root_title">Start (dla urządzeń zrootowanych)</string>
+    <string name="development_settings">Opcje developerskie</string>
+    <string name="adb_pair_required">Najpierw przejdż przez krok parowania.</string>
+    <string name="cannot_connect_port">Nie można połączyć usługi bezprzewodowego debugowania.</string>
+    <string name="paring_code_is_wrong">Kod parowania jest błędny.</string>
+    <string name="dialog_adb_pairing_paring_code">Kod parowania</string>
+    <string name="dialog_adb_pairing_discovery">Szukanie usługi parowania</string>
+    <string name="dialog_adb_pairing_title">Sparuj z urządzeniem</string>
+    <string name="adb_pairing">Parowanie</string>
+    <string name="dialog_requesting_legacy_button_open_shizuku">Otwórz Shizuku</string>
+    <string name="dialog_cannot_open_browser_title">Nie można uruchomić przeglądarki</string>
+    <string name="start_with_root_failed">Nie można uruchomić usługi ponieważ nie przyznano uprawnień root lub urządzenie nie jest zrootowane.</string>
+    <string name="home_app_management_view_authorized_apps">Kliknij aby zarządzać autoryzowanymi aplikacjami</string>
+    <string name="home_app_management_title">Zarządzanie aplikacjami</string>
+    <string name="home_root_button_restart">Restart</string>
+    <string name="home_root_button_start">Start</string>
+    <string name="magisk_module">moduł Magisk</string>
+    <string name="translation_contributors">Gabriel Markowski</string>
+    <string name="dialog_adb_discovery">Szukanie usługi bezprzewodowego debugowania</string>
+    <string name="home_adb_button_view_help">Przeczytaj pomoc</string>
 </resources>
